Add some apis and improved little but)
